--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,8 @@ version: '3.7'
 services:
   egzodia-app:
     build:
-      context: ..
+      context: ./
       target: dev
-      dockerfile: .dev-container/Dockerfile
     volumes:
       - .:/var/dev/egzodia
       - /var/dev/egzodia/node_modules/
