--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "egzodia",
-  "version": "0.0.0",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
+  "packageManager": "pnpm@7.1.7",
   "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev --parallel",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "build": "nuxi build",
+    "dev": "nuxi dev",
+    "start": "node .output/server/index.mjs",
+    "lint": "eslint ."
   },
   "devDependencies": {
-    "eslint-config-custom": "workspace:*",
-    "prettier": "latest",
-    "turbo": "latest"
-  },
-  "engines": {
-    "npm": ">=7.0.0",
-    "node": ">=14.0.0"
-  },
-  "dependencies": {},
-  "packageManager": "pnpm@7.1.7"
+    "@iconify-json/carbon": "^1.1.5",
+    "@iconify-json/twemoji": "^1.1.4",
+    "@nuxtjs/color-mode": "^3.1.3",
+    "@pinia/nuxt": "^0.1.9",
+    "@sidi3li/eslint-config": "^1.0.9",
+    "@unocss/nuxt": "^0.37.4",
+    "@vueuse/nuxt": "^8.6.0",
+    "eslint": "^8.17.0",
+    "nuxt": "^3.0.0-rc.3",
+    "pinia": "^2.0.14",
+    "typescript": "^4.7.3"
+  }
 }
