--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.5",
+    "@iconify-json/tabler": "^1.1.15",
     "@iconify-json/twemoji": "^1.1.4",
     "@nuxtjs/color-mode": "^3.1.3",
     "@pinia/nuxt": "^0.1.9",
